# find-moj-data

./: .dockerignore  .env.example  .env.tpl  .gitignore  .npmrc  .pre-commit-config.yaml  .secrets.baseline  .trivyignore.yaml  Dockerfile  Makefile  READ.md  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: General Task  epic-template.yml  feature-request-template.yml  general-task.yml  implementation.md  new-frontend-design-template.yml  story-template.yml
.github/workflows/: build-push-deploy-dev.yml  build-push-deploy-prod.yml  check-for-vulnerabilities.yml  check-pre-commit-has-been-run.yml  database-housekeeping.yml  dependabot-create-issue.yml  dependency-review.yml  deploy-dev-from-branch.yml  deploy-generic.yml  deploy-prod.yml  deploy-staged.yml  deploy-test-from-branch.yml  deploy-test.yml  deploy-to-dev.yml  deploy.yml  ingest-cadet.yml  ip-check-create-issue.yml  lint.yml  notify-slack-on-failure.yml  notify.yml  prod-deploys-create-issue.yml  publish-datahub-client.yml  reusable-build-and-deploy.yml  reusable-build.yml  reusable-deploy.yml  reusable-promote.yml  reusable-publish-datahub-client.yml  reusable-push-and-deploy.yml  reusable-tests.yml  runbooks-broken-link-check.yml  scan-image.yml  test-and-deploy.yml  test-datahub-client.yml  test.yml
catalogue-frontend/: .env.example
catalogue-frontend/core/: __init__.py
catalogue-frontend/home/: models.py
catalogue-frontend/sample_data/: sample_search_page.yaml
catalogue-frontend/tests/: conftest.py  test_forms.py
core/: context_processors.py  helpers.py  middleware.py  settings.py  urls.py  views.py
core/graphql_queries/: get-data-products.graphql
dashboard/: exceptions.py  service.py  urls.py  views.py
dashboard/templates/: dashboard.html
datahub_client/: client.py  entities.py  exceptions.py  parsers.py  search_types.py  validators.py
datahub_client/client/: datahub_client.py  parsers.py
datahub_client/graphql/: facets.graphql  getChartDetails.graphql  getContainerDetails.graphql  getDashboardDetails.graphql  getDatasetDetails.graphql  getEntityTypeCounts.graphql  getGlossaryTermDetails.graphql  getSchemaDetails.graphql  getTags.graphql  listSubjectAreas.graphql  loader.py  search.graphql
datahub_client/search/: filters.py  search_client.py  search_types.py
deployments/templates/: deployment.yml  hpa.yml  ingress.yml  secrets.yml  service.yml
docs/: Running the app against RDS.md
feedback/: forms.py  mixins.py  models.py  service.py  urls.py  views.py
feedback/migrations/: 0001_initial.py  0001_initial_squashed_0010_issue_delete_reportissue.py  0001_initial_squashed_0011_alter_issue_id.py  0002_alter_feedback_how_can_we_improve.py  0002_remove_issue_user_email_issue_created_by.py  0003_alter_issue_reason.py  0003_reportissue.py  0004_rename_data_owner_email_issue_data_custodian_email_and_more.py  0004_reportissue_additional_info_alter_reportissue_reason.py  0005_alter_feedback_how_can_we_improve_and_more.py  0005_reportissue_user_email_and_more.py  0006_feedbackyes.py  0006_rename_data_asset_owner_email_reportissue_data_owner_email_and_more.py  0007_alter_feedbackyes_interested_in_research_feedbackno_and_more.py  0007_reportissue_created_reportissue_modified_and_more.py  0008_alter_reportissue_additional_info_and_more.py  0008_remove_feedbackreport_interested_in_research.py  0009_alter_reportissue_additional_info_and_more.py  0009_remove_feedbackno_created_by_and_more.py  0010_alter_feedbackno_difficult_to_understand_and_more.py  0010_delete_feedback.py  0010_issue_delete_reportissue.py  0011_alter_issue_id.py  0011_merge_20250908_1530.py  0012_alter_feedbackno_additional_information_and_more.py  0013_alter_feedbackno_interested_in_research_and_more.py  0014_remove_issue_reason_alter_issue_additional_info.py  0015_alter_feedbackno_interested_in_research_and_more.py  0016_feedback_yes_no_something_else_fields.py  0017_feedbackreport_some_other_issue_and_more.py
feedback/service/: notify.py
feedback/templates/: feedback.html  feedback_form.html  feedback_success.html  no.html  report.html  report_issue.html  thanks.html  yes.html
home/: apps.py  helper.py  services.py  test_views.py  urls.py  urns.py  views.py
home/forms/: domain_model.py  search.py
home/migrations/: 0001_initial.py  0002_delete_catalogue.py
home/models/: domain_model.py  subject_area_taxonomy.py
home/service/: base.py  details.py  details_csv.py  domain_fetcher.py  glossary.py  list_domain_fetcher.py  metadata_specification.py  search.py  search_facet_fetcher.py  search_tag_fetcher.py  subject_area_fetcher.py
home/templatetags/: clear_filter.py  format_metadata_field_type.py  format_timesince.py  future.py  govuk.py  lookup.py  markdown.py  page_title.py  snippets.py  tag_colour.py
home/utils/: storage.py
ingestion/: cadet.yaml
lib/datahub-client/: CHANGELOG.md  README.md  mitch_test.txt  pyproject.toml
sample_data/: sample_search_page.yaml
scripts/: app-entrypoint.sh  import-static.sh
scripts/esdas/: datafirst.yaml  datalinkingteam.yaml  import_esdas.py  user.yaml
scss/: _details.scss  _glossary.scss  _masthead.scss  _more-less-toggle.scss  base.scss  search.scss  vars.scss
scss/components/: README.md  _access_panel.scss  _card-grid.scss  (+7 more)
static/: feedback.css
templates/: 400.html  404.html  500.html  500_datahub_unavailable.html  accessibility_statement.html  cookies.html  details.html  details_base.html  details_chart.html  details_dashboard.html  details_data_product.html  details_database.html  details_dataset.html  details_metric.html  details_public_domain_data.html  details_publication_collection.html  details_publication_dataset.html  details_schema.html  details_table.html  external_redirect.html  glossary.html  glossary_term.html  home copy.html  home.html  hometest.html  metadata_specification.html  search.html  userguide_page.html
tests/: conftest.py  test_forms.py  test_services.py  test_views.py
userguide/: apps.py  urls.py  views.py
users/: helper.py  managers.py  models.py
(+166 files in other folders)
