[tool.poetry]
name = "find-moj-data"
version = "0.1.0"
description = ""
authors = ["Mitch Dawson <Mitchell.Dawson@justice.gov.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
django-prometheus = "^2.4.1"
pyyaml = "^6.0.2"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"
markdown = "^3.8"
python-dotenv = "^1.1.1"
markdown-headdown = "^0.1.3"
nltk = "^3.9.1"
sentry-sdk = { extras = ["django"], version = "^2.32.0" }
django-azure-auth = "2.3.0"
django-waffle = "^5.0.0"
psycopg = "^3.2.9"
psycopg-binary = "^3.2.9"
django-debug-toolbar = "^5.2.0"
redis = { extras = ["hiredis"], version = "^6.2.0" }
notifications-python-client = "^10.0.1"
pydantic = { extras = ["email"], version = "^2.11.7" }
email-validator = "2.2.0"
acryl-datahub = { extras = ["datahub-rest"], version = "^1.1.0.4" }
deepdiff = "^8.5.0"
boto3 = "^1.39.0"
setuptools = "80.9.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^4.2.0"
selenium = "~=4.33.0"
flake8 = ">=6.1.0"
pytest-django = "^4.11.1"
pytest-cov = "^6.2.1"
faker = "^37.4.0"
isort = "^6.0.1"
freezegun = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "datahub: marks tests that query Datahub rather than mocking",
]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.flake8]
per-file-ignores = [
    '*/test_datahub_client.py:E501',
    '*/test_graphql_helpers.py:E501',
    '*/test_search.py:E501',
    '*/test_integration_with_datahub_server.py:E501,F401',
    '*/conftest.py:E501,F401',
]
ignore = ['E203', 'E266', 'W503', 'F403']
exclude = ".git,.mypy_cache,.pytest_cache,build,dist"
max-line-length = 89
max-complexity = 18
select = "B,C,E,F,W,T4,B9"
