[project]
name = "find-moj-data"
version = "0.1.0"
description = ""
authors = [{ name = "Mitch Dawson", email = "Mitchell.Dawson@justice.gov.uk" }]
requires-python = "~=3.13.5"
readme = "README.md"
dependencies = [
    "django~=5.2.8",
    "django-prometheus>=2.4.1,<3",
    "pyyaml>=6.0.2,<7",
    "gunicorn>=23.0.0,<24",
    "whitenoise>=6.9.0,<7",
    "markdown~=3.8",
    "python-dotenv>=1.1.1,<2",
    "markdown-headdown>=0.1.3,<0.2",
    "nltk>=3.9.1,<4",
    "sentry-sdk[django]>=2.32.0,<3",
    "django-azure-auth==2.4.0",
    "django-waffle>=5.0.0,<6",
    "psycopg>=3.2.9,<4",
    "psycopg-binary>=3.2.9,<4",
    "django-debug-toolbar>=5.2.0,<7",
    "redis[hiredis]>=6.2.0,<8",
    "notifications-python-client>=10.0.1,<11",
    "pydantic[email]>=2.11.7,<3",
    "email-validator==2.3.0",
    "acryl-datahub[datahub-rest]>=1.1.0.4,<2",
    "deepdiff>=8.6.0,<9",
    "boto3>=1.38.46,<2",
    "setuptools==80.9.0",
    "cffi==2.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0,<5",
    "selenium~=4.40.0",
    "pytest-django>=4.11.1,<5",
    "pytest-cov>=6.2.1,<8",
    "faker>=37.4.0,<41",
    "freezegun>=1.5.2,<2",
    "ruff>=0.9.2,<1",
]

[tool.uv]
package = false
required-version = ">=0.7.17"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "datahub: marks tests that query Datahub rather than mocking",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E203",   # whitespace before ':'
    "E266",   # too many leading '#' for block comment
]

[tool.ruff.lint.per-file-ignores]
"*/conftest.py" = ["F401", "E501"]
"*/test_datahub_client.py" = ["E501"]
"*/test_graphql_helpers.py" = ["E501"]
"*/test_search.py" = ["E501"]
"*/test_integration_with_datahub_server.py" = ["E501", "F401"]
"*/type_helpers.py" = ["UP047"]  # Uses TypeVar pattern from upstream datahub

[tool.ruff.lint.isort]
known-first-party = ["core", "home", "feedback", "users", "datahub_client", "userguide"]
